--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.9.5",
+    "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -56,6 +57,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.25",
     "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0"
+    "@types/redux-thunk": "^2.1.0",
+    "@types/validator": "^13.7.14"
   }
 }
